# IMACMAN

./: .gitignore  CMakeLists.txt  README.md
IMACMAN/: TODO.txt  libraries.hpp  main.cpp  main.hpp  makefile
IMACMAN.xcodeproj/: project.pbxproj
IMACMAN.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
IMACMAN.xcodeproj/project.xcworkspace/xcuserdata/val.xcuserdatad/: UserInterfaceState.xcuserstate
IMACMAN.xcodeproj/xcshareddata/xcschemes/: Makefile.xcscheme  Xcode.xcscheme
IMACMAN.xcodeproj/xcuserdata/val.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
IMACMAN.xcodeproj/xcuserdata/val.xcuserdatad/xcschemes/: Makefile.xcscheme  xcschememanagement.plist
IMACMAN/Core/: Core.cpp  Core.hpp  GameObject.cpp  GameObject.hpp  Igniter.cpp  Igniter.hpp  openGLDebbugLog.hpp
IMACMAN/Engines/GameEngine/: GItemFactory.hpp  GameEngine.cpp  GameEngine.hpp  Ghost.cpp  Ghost.hpp  Grid.cpp  Grid.hpp  PacGum.cpp  PacGum.hpp  Pacman.cpp  Pacman.hpp  Player.cpp  Player.hpp  Wall.cpp  Wall.hpp
IMACMAN/Engines/GameEngine/GItem/: DynamicItem.cpp  DynamicItem.hpp  Floor.cpp  Floor.hpp  Fruit.cpp  Fruit.hpp  GItem.hpp  Ghost.cpp  Ghost.hpp  PacGum.cpp  PacGum.hpp  Pacman.cpp  Pacman.hpp  StaticItem.hpp  Wall.hpp
IMACMAN/Engines/RenderEngine/: Camera.hpp  LightManager.cpp  LightManager.hpp  RenderEngine.cpp  RenderEngine.hpp
IMACMAN/Engines/RenderEngine/Manager/: GhostsManager.cpp  Manager.hpp  (+7 more)
IMACMAN/Engines/RessourcesEngine/: RessourcesEngine.cpp  RessourcesEngine.hpp  primitives.cpp
IMACMAN/IMACMAN/: makefile
IMACMAN/IMACMAN.xcodeproj/: project.pbxproj
IMACMAN/Scenes/: Scene.hpp  gameOverScene.cpp  gameOverScene.hpp  gameOverlay.cpp  gameOverlay.hpp  gameScene.cpp  gameScene.hpp  loadingScene.cpp  loadingScene.hpp  mainMenu.cpp  mainMenu.hpp  sceneConsole.cpp  sceneConsole.hpp  sceneGame01.cpp  sceneGame01.hpp  sceneTest001.cpp  sceneTest001.hpp  sceneTest002.cpp  sceneTest002.hpp  sceneTest003.cpp  sceneTest003.hpp  victoryScene.cpp  victoryScene.hpp
IMACMAN/Utils/: DrawCursor.cpp  DrawCursor.hpp  Enums.hpp  FilePath.hpp  SDL.cpp  SDL.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Vertex.hpp
IMACMAN/Utils/Primitive/: Primitive.hpp  Sphere.cpp  Sphere.hpp  Vertex.hpp
IMACMAN/Utils/Selector/: Item.cpp  Item.hpp  Selector.cpp  Selector.hpp
(+57 files in other folders)
